# RKMediaCodecDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/rockchip/rkmediacodecdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/rockchip/rkmediacodecdemo/: MainActivity.java  PlayerView.java  PortScanner.java  RKMediaplayer.java
app/src/main/java/com/rockchip/rkmediacodecdemo/rtsp/: AACPackage.java  H264Package.java  NALUnit.java  RTCPPackage.java  RTPConnector.java  RTPPackage.java  RTSPConnector.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/rockchip/rkmediacodecdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
rkmediacodec/: CMakeLists.txt  build.gradle
rkmediacodec/src/androidTest/java/com/rockchip/rkmediacodec/: ExampleInstrumentedTest.java
rkmediacodec/src/main/: AndroidManifest.xml
rkmediacodec/src/main/cpp/: log.h  native-lib.cpp  rk_mpp.cpp  rk_mpp.h
rkmediacodec/src/main/java/com/rockchip/rkmediacodec/: RKMediaCodec.java
rkmediacodec/src/main/res/values/: strings.xml
rkmediacodec/src/test/java/com/rockchip/rkmediacodec/: ExampleUnitTest.java
